# qreservoir

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: .gitignore
qreservoir/: __init__.py  abstract_base_classes.py  datasets.py  encoders.py  models.py  reservoirs.py
qreservoir/datasets/: Circles.py  Complex_Fourrier.py  Dataset.py  LinearlySeperable.py  MackeyGlass.py  Moons.py  Random.py  Sine.py
qreservoir/encoders/: CHEEncoder.py  Encoder.py  ExpEncoder.py  HEEncoder.py  NoisyHEEncoder.py  NonCorrelatedCHEE.py  __init__.py
qreservoir/models/: QELModel.py  RCModel.py
qreservoir/reservoirs/: CNOTReservoir.py  HarrRandomReservoir.py  IsingMagTraverseReservoir.py  Reservoir.py  RotationReservoir.py
tests/: test_sanity.py
tests/test_encoders/: test_CHEEncoder.py  test_ExpEncoder.py  test_HEEncoder.py  test_NoisyHEEncoder.py
tests/test_models/: test_QELModel.py  test_RCModel.py
tests/test_reservoirs/: test_CNOTReservoir.py  test_HarrRandomReservoir.py  test_IsingMagTraverseReservoir.py  test_RotationReservoir.py
