[tool.poetry]
name = "qreservoir"
version = "0.1.1"
description = "Python package for quantum reservoir computing using Qulacs"
authors = ["Owen Agnel <owen.agnel@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/owenagnel/qreservoir"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
qulacs = "^0.6.1"
matplotlib = "^3.7.2"
colour = "^0.1.5"
qulacsvis = "^0.7.3"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"


[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"
exclude = [
    'scripts',  # TOML literal string (single-quotes, no escaping necessary)
]


[[tool.mypy.overrides]]
module = ['qulacsvis.*', 'sklearn.*', 'matplotlib.*']
ignore_missing_imports = true